# torch-c-

./: .gitignore  AGENTS.md  CMakeLists.txt  LICENSE  README.md  WIP.md  charformer.hpp  charrnn.hpp  dataset_dir.cpp  dataset_dir.hpp  meson.build  meson.options  trails.hpp  trails.pc.in  trails_nn.hpp  trainium.cpp  util.hpp
cmake/: TrailsConfig.cmake.in
demos/: CMakeLists.txt  charformer-shakespeare.cpp  hello-trails.cpp  mnist-compare.cpp
include/trails/: trails.hpp  trails_nn.hpp
tests/: charformer_tests.cpp  dataset_tests.cpp  tensor_tests.cpp  trails_header_smoke.cpp
